--- a/basket.html
+++ b/basket.html
@@ -88,22 +88,25 @@
 
 </section>
 
-<!-- FOOTER -->
-<footer class="footer">
-    <div class="footer-content">
-        <a href="mailto:laurence.cusin-masset@etu.uni-paris1.fr?subject=Question%20sur%20le%20site%20internet">
-            Nous contacter par mail
-        </a>
+    <!-- FOOTER -->
+    <div id="footer"></div>
 
-        <a href="mentions-legales.html">Mentions légales</a>
+    <!-- SCRIPTS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-        <h4>&copy; Laiquah Pandore et Laurence Cusin Masset — Tous droits réservés — 2025</h4>
-    </div>
-</footer>
-
-<!-- Scripts -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            fetch("footer.html")
+                .then(res => res.text())
+                .then(html => {
+                    const footerContainer = document.getElementById("footer");
+                    if (footerContainer) {
+                        footerContainer.innerHTML = html;
+                    }
+                })
+                .catch(err => console.error("Footer konnte nicht geladen werden:", err));
+        });
+    </script>
 </body>
 </html>
