--- a/footer.html
+++ b/footer.html
@@ -6,6 +6,6 @@
 
         <a href="pdf/mentions-legales.pdf" target="_blank">Mentions légales</a>
 
-        <h4>&copy; Laiquah Pandore et Laurence Cusin Masset — Tous droits réservés — 2025</h4>
+        <h4>&copy; Laiquah Pandore et Laurence Cusin Masset ET LUCAAAAAAAAAAAAAAAAAAAAA — Tous droits réservés — 2025</h4>
     </div>
 </footer>
