--- a/tennis.html
+++ b/tennis.html
@@ -87,7 +87,9 @@
     </p>
 
     <figure>
-        <img src="image/TennisMenu.jpg" alt="Tennis">
+        <div class="section-box">
+            <img src="image/TennisMenu.jpg" alt="Tennis">
+          </div>
         <figcaption>
             <em>Légende : Une fille qui joue au tennis avec son coéquipier (Crédits : photo libre de droit)</em>
         </figcaption>
