--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
             Haec igitur lex in amicitia sanciatur, ut neque rogemus res turpes nec faciamus rogati.
         </p>
 
-        <img src="image/TennisMenu.jpg" alt="Tennis">
+        <div class="section-box">
+            <img src="image/TennisMenu.jpg" alt="Tennis">
+        </div>
     </main>
 
     <!-- FOOTER -->
