--- a/sport.html
+++ b/sport.html
@@ -30,96 +30,70 @@
 
 <body>
 
-<!-- MENU -->
-<header>
-    <nav class="menu">
-        <ul class="menu-main">
-            <li><a href="index.html">Accueil</a></li>
+    <!-- NAVBAR -->
+    <div id="navbar"></div>
 
-            <li class="has-sub">
-                <a href="sport.html">Faire du sport en plein air</a>
-                <ul class="submenu">
-                    <li><a href="tennis.html">Tennis</a></li>
-                    <li><a href="running.html">Running</a></li>
-                    <li><a href="basket.html">Basket</a></li>
-                </ul>
-            </li>
-
-            <li class="has-sub">
-                <a href="equipements.html">S'équiper</a>
-                <ul class="submenu">
-                    <li><a href="selection-ete.html">Notre sélection été</a></li>
-                    <li><a href="selection-hiver.html">Notre sélection hiver</a></li>
-                    <li><a href="astuces.html">Astuces</a></li>
-                </ul>
-            </li>
-
-            <li><a href="sources.html">Sources</a></li>
-        </ul>
-    </nav>
-</header>
-
-<!-- HERO -->
-<section class="sport-hero">
-    <h1>Faire du sport en plein air à Paris</h1>
-    <p>
-        Découvrez les meilleurs lieux pour courir, jouer au tennis ou au basket,
-        et équipez-vous pour profiter pleinement du plein air.
-    </p>
-</section>
-
-<!-- CARTE -->
-<section class="map-section">
-    <h2>Carte interactive des lieux</h2>
-    <iframe
-        title="Carte des lieux pour faire du sport en plein air à Paris"
-        src="https://www.google.com/maps/d/embed?mid=1dE0VjLq6B2FMIXfa11g2IpUoX3H8Q1U&ehbc=2E312F&noprof=1"
-        loading="lazy">
-    </iframe>
-
-    <p>
-        Parcourez les terrains et parcs de Paris pour pratiquer votre sport préféré en plein air.
-    </p>
-
-    <p>
-        Pour vous simplifier la tâche, nous avons regroupé pour vous tous les endroits où faire du sport :
-        terrains de tennis, terrains de basket et parcs à Paris pour aller courir.
-        Vous retrouverez l’endroit le plus proche de chez vous pour vous défouler.
-    </p>
-
-    <article>
+    <!-- HERO -->
+    <section class="sport-hero">
+        <h1>Faire du sport en plein air à Paris</h1>
         <p>
-            Vous êtes plutôt raquette de tennis, ballon de basket ou chaussures de running ?
-            Cette page rassemble toutes les informations nécessaires pour faire du sport à Paris,
-            en plein air.
+            Découvrez les meilleurs lieux pour courir, jouer au tennis ou au basket,
+            et équipez-vous pour profiter pleinement du plein air.
         </p>
-    </article>
-</section>
+    </section>
 
-<!-- LIENS VERS LES SPORTS -->
-<section class="sport-links">
-    <div class="sport-links-grid">
+    <!-- CARTE -->
+    <section class="map-section">
+        <h2>Carte interactive des lieux</h2>
+        <iframe
+            title="Carte des lieux pour faire du sport en plein air à Paris"
+            src="https://www.google.com/maps/d/embed?mid=1dE0VjLq6B2FMIXfa11g2IpUoX3H8Q1U&ehbc=2E312F&noprof=1"
+            loading="lazy">
+        </iframe>
 
-        <div class="sport-card">
-            <h2>Tennis</h2>
-            <p>Pour en savoir plus sur le tennis.</p>
-            <a href="tennis.html" class="btn-pill">Je découvre le tennis</a>
+        <p>
+            Parcourez les terrains et parcs de Paris pour pratiquer votre sport préféré en plein air.
+        </p>
+
+        <p>
+            Pour vous simplifier la tâche, nous avons regroupé pour vous tous les endroits où faire du sport :
+            terrains de tennis, terrains de basket et parcs à Paris pour aller courir.
+            Vous retrouverez l’endroit le plus proche de chez vous pour vous défouler.
+        </p>
+
+        <article>
+            <p>
+                Vous êtes plutôt raquette de tennis, ballon de basket ou chaussures de running ?
+                Cette page rassemble toutes les informations nécessaires pour faire du sport à Paris,
+                en plein air.
+            </p>
+        </article>
+    </section>
+
+    <!-- LIENS VERS LES SPORTS -->
+    <section class="sport-links">
+        <div class="sport-links-grid">
+
+            <div class="sport-card">
+                <h2>Tennis</h2>
+                <p>Pour en savoir plus sur le tennis.</p>
+                <a href="tennis.html" class="btn-pill">Je découvre le tennis</a>
+            </div>
+
+            <div class="sport-card">
+                <h2>Running</h2>
+                <p>Découvrez des conseils et itinéraires pour courir à Paris.</p>
+                <a href="running.html" class="btn-pill">Je découvre le running</a>
+            </div>
+
+            <div class="sport-card">
+                <h2>Basket</h2>
+                <p>Pour en savoir plus sur le basket et améliorer vos tirs.</p>
+                <a href="basket.html" class="btn-pill">Je découvre le basket</a>
+            </div>
+
         </div>
-
-        <div class="sport-card">
-            <h2>Running</h2>
-            <p>Découvrez des conseils et itinéraires pour courir à Paris.</p>
-            <a href="running.html" class="btn-pill">Je découvre le running</a>
-        </div>
-
-        <div class="sport-card">
-            <h2>Basket</h2>
-            <p>Pour en savoir plus sur le basket et améliorer vos tirs.</p>
-            <a href="basket.html" class="btn-pill">Je découvre le basket</a>
-        </div>
-
-    </div>
-</section>
+    </section>
 
     <!-- FOOTER -->
     <div id="footer"></div>
@@ -128,18 +102,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            fetch("footer.html")
-                .then(res => res.text())
-                .then(html => {
-                    const footerContainer = document.getElementById("footer");
-                    if (footerContainer) {
-                        footerContainer.innerHTML = html;
-                    }
-                })
-                .catch(err => console.error("Footer konnte nicht geladen werden:", err));
-        });
-    </script>
+    <!-- Layout-Script -->
+    <script src="layout.js"></script>
 </body>
 </html>
