--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                 </ol>
 
                 <div class="carousel-inner">
-                    <div class="item active section-box">
+                    <div class="item active only-top-radius">
                         <img src="image/RunMenu.png" alt="Running">
                     </div>
 
-                    <div class="item section-box">
+                    <div class="item only-top-radius">
                         <img src="image/BasketMenu.png" alt="Basket">
                     </div>
 
-                    <div class="item section-box">
+                    <div class="item only-top-radius">
                         <img src="image/TennisMenu.jpg" alt="Tennis">
                     </div>
                 </div>
