--- a/index.html
+++ b/index.html
@@ -91,13 +91,15 @@
 
     <!-- A PROPOS -->
     <main>
-        <h2>A propos</h2>
-        <p>
-            Haec igitur lex in amicitia sanciatur, ut neque rogemus res turpes nec faciamus rogati.
-        </p>
+        <div class="only-bottom-radius">
+            <h2>A propos</h2>
+            <p>
+                Haec igitur lex in amicitia sanciatur, ut neque rogemus res turpes nec faciamus rogati.
+            </p>
 
-        <div class="section-box">
-            <img src="image/TennisMenu.jpg" alt="Tennis">
+            <div class="section-box">
+                <img src="image/TennisMenu.jpg" alt="Tennis">
+            </div>
         </div>
     </main>
 
