--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                 </ol>
 
                 <div class="carousel-inner">
-                    <div class="item active only-top-radius">
+                    <div class="item active">
                         <img src="image/RunMenu.png" alt="Running">
                     </div>
 
-                    <div class="item only-top-radius">
+                    <div class="item">
                         <img src="image/BasketMenu.png" alt="Basket">
                     </div>
 
-                    <div class="item only-top-radius">
+                    <div class="item">
                         <img src="image/TennisMenu.jpg" alt="Tennis">
                     </div>
                 </div>
@@ -91,15 +91,13 @@
 
     <!-- A PROPOS -->
     <main>
-        <div class="only-bottom-radius">
-            <h2>A propos</h2>
-            <p>
-                Haec igitur lex in amicitia sanciatur, ut neque rogemus res turpes nec faciamus rogati.
-            </p>
+        <h2>A propos</h2>
+        <p>
+            Haec igitur lex in amicitia sanciatur, ut neque rogemus res turpes nec faciamus rogati.
+        </p>
 
-            <div class="section-box">
-                <img src="image/TennisMenu.jpg" alt="Tennis">
-            </div>
+        <div class="section-box">
+            <img src="image/TennisMenu.jpg" alt="Tennis">
         </div>
     </main>
 
