--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </section>
 
     <!-- BIENVENUE -->
-    <section class="welcome-section no-radius">
+    <section class="welcome-section">
         <h2>Bienvenue !</h2>
 
         <p>
