--- a/sport.html
+++ b/sport.html
@@ -103,6 +103,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <!-- Layout-Script -->
-    <script src="layout.js"></script>
+    <script src="js/layout.js"></script>
 </body>
 </html>
