--- a/equipements.html
+++ b/equipements.html
@@ -5,8 +5,9 @@
     <title>S'équiper</title>
 
     <meta name="author" content="Laurence Cusin-Masset et Laiquah Pandore">
-    <meta name="description" content="Amateur ou professionnels de la course à pied, découvrez des itinéraires à Paris adaptés à votre niveau.">
-    <meta name="keywords" content="course à pied, running, marathon, chaussures de sport">
+    <meta name="description"
+          content="Amateur ou professionnels du sport, découvrez comment bien vous équiper.">
+    <meta name="keywords" content="équipement sportif, chaussures, vêtements, sport">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Icon -->
@@ -14,7 +15,8 @@
     <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/base.css">
@@ -25,104 +27,63 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap"
+          rel="stylesheet">
 </head>
 
 <body>
 
-<!-- MENU -->
-<header>
-    <nav class="menu">
-        <ul class="menu-main">
-            <li><a href="index.html">Accueil</a></li>
+    <!-- NAVBAR -->
+    <div id="navbar"></div>
 
-            <li class="has-sub">
-                <a href="sport.html">Faire du sport en plein air</a>
-                <ul class="submenu">
-                    <li><a href="tennis.html">Tennis</a></li>
-                    <li><a href="running.html">Running</a></li>
-                    <li><a href="basket.html">Basket</a></li>
-                </ul>
-            </li>
+    <!-- HERO -->
+    <section class="hero">
+        <h1>S'équiper</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
+            Suspendisse lectus tortor, dignissim sit amet.
+        </p>
+    </section>
 
-            <li class="has-sub">
-                <a href="equipements.html">S'équiper</a>
-                <ul class="submenu">
-                    <li><a href="selection-ete.html">Notre sélection été</a></li>
-                    <li><a href="selection-hiver.html">Notre sélection hiver</a></li>
-                    <li><a href="astuces.html">Astuces</a></li>
-                </ul>
-            </li>
+    <!-- CONTENU -->
+    <section class="equipements">
+        <h2>Équipements</h2>
 
-            <li><a href="sources.html">Sources</a></li>
-        </ul>
-    </nav>
-</header>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
+            Suspendisse lectus tortor, dignissim sit amet.
+        </p>
 
-<!-- HERO -->
-<section class="hero">
-    <h1>S'équiper</h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
-</section>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
+            Suspendisse lectus tortor, dignissim sit amet.
+        </p>
 
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
+            Suspendisse lectus tortor, dignissim sit amet.
+        </p>
 
-<section class="equipements">
-    <h2>Equipements</h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
+            Suspendisse lectus tortor, dignissim sit amet.
+        </p>
 
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
+            Suspendisse lectus tortor, dignissim sit amet.
+        </p>
+    </section>
 
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
-
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
-
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
-</section>
-    
-
-<!-- FOOTER -->
+    <!-- FOOTER -->
     <div id="footer"></div>
 
     <!-- SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            fetch("footer.html")
-                .then(res => res.text())
-                .then(html => {
-                    const footerContainer = document.getElementById("footer");
-                    if (footerContainer) {
-                        footerContainer.innerHTML = html;
-                    }
-                })
-                .catch(err => console.error("Footer konnte nicht geladen werden:", err));
-        });
-    </script>
+    <!-- LAYOUT SCRIPT -->
+    <script src="js/layout.js"></script>
+
 </body>
 </html>
