--- a/running.html
+++ b/running.html
@@ -5,7 +5,8 @@
     <title>Running</title>
 
     <meta name="author" content="Laurence Cusin-Masset et Laiquah Pandore">
-    <meta name="description" content="Amateur ou professionnels de la course à pied, découvrez des itinéraires à Paris adaptés à votre niveau.">
+    <meta name="description"
+          content="Amateur ou professionnels de la course à pied, découvrez des itinéraires à Paris adaptés à votre niveau.">
     <meta name="keywords" content="course à pied, running, marathon, chaussures de sport">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -14,7 +15,8 @@
     <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/base.css">
@@ -25,48 +27,23 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap"
+          rel="stylesheet">
 </head>
 
 <body>
 
-<!-- MENU -->
-<header>
-    <nav class="menu">
-        <ul class="menu-main">
-            <li><a href="index.html">Accueil</a></li>
+    <!-- NAVBAR -->
+    <div id="navbar"></div>
 
-            <li class="has-sub">
-                <a href="sport.html">Faire du sport en plein air</a>
-                <ul class="submenu">
-                    <li><a href="tennis.html">Tennis</a></li>
-                    <li><a href="running.html">Running</a></li>
-                    <li><a href="basket.html">Basket</a></li>
-                </ul>
-            </li>
-
-            <li class="has-sub">
-                <a href="equipements.html">S'équiper</a>
-                <ul class="submenu">
-                    <li><a href="selection-ete.html">Notre sélection été</a></li>
-                    <li><a href="selection-hiver.html">Notre sélection hiver</a></li>
-                    <li><a href="astuces.html">Astuces</a></li>
-                </ul>
-            </li>
-
-            <li><a href="sources.html">Sources</a></li>
-        </ul>
-    </nav>
-</header>
-
-<!-- HERO -->
-<section class="hero">
-    <h1>Running : des itinéraires adaptés à votre niveau</h1>
-    <p>
-        De la Tour Eiffel aux quais de Seine, courir en plein air à Paris offre un cadre idyllique pour tous les niveaux.
-        Découvrez des parcours variés, que vous soyez débutant, joggeur régulier ou marathonien en préparation.
-    </p>
-</section>
+    <!-- HERO -->
+    <section class="hero">
+        <h1>Running : des itinéraires adaptés à votre niveau</h1>
+        <p>
+            De la Tour Eiffel aux quais de Seine, courir en plein air à Paris offre un cadre idyllique pour tous les niveaux.
+            Découvrez des parcours variés, que vous soyez débutant, joggeur régulier ou marathonien en préparation.
+        </p>
+    </section>
 
     <!-- FOOTER -->
     <div id="footer"></div>
@@ -75,18 +52,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            fetch("footer.html")
-                .then(res => res.text())
-                .then(html => {
-                    const footerContainer = document.getElementById("footer");
-                    if (footerContainer) {
-                        footerContainer.innerHTML = html;
-                    }
-                })
-                .catch(err => console.error("Footer konnte nicht geladen werden:", err));
-        });
-    </script>
+    <!-- LAYOUT SCRIPT -->
+    <script src="js/layout.js"></script>
+
 </body>
 </html>
