--- a/selection-hiver.html
+++ b/selection-hiver.html
@@ -2,11 +2,13 @@
 <html lang="fr-FR">
 <head>
     <meta charset="utf-8">
-    <title>Selection Hiver</title>
+    <title>Notre sélection hiver</title>
 
     <meta name="author" content="Laurence Cusin-Masset et Laiquah Pandore">
-    <meta name="description" content="Amateur ou professionnels de la course à pied, découvrez des itinéraires à Paris adaptés à votre niveau.">
-    <meta name="keywords" content="course à pied, running, marathon, chaussures de sport">
+    <meta name="description"
+          content="Notre sélection d'équipements hivernaux pour faire du sport en plein air à Paris.">
+    <meta name="keywords"
+          content="sport, hiver, équipements, running, tennis, basket">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Icon -->
@@ -14,7 +16,8 @@
     <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/base.css">
@@ -25,84 +28,52 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap"
+          rel="stylesheet">
 </head>
 
 <body>
 
-<!-- MENU -->
-<header>
-    <nav class="menu">
-        <ul class="menu-main">
-            <li><a href="index.html">Accueil</a></li>
+    <!-- NAVBAR -->
+    <div id="navbar"></div>
 
-            <li class="has-sub">
-                <a href="sport.html">Faire du sport en plein air</a>
-                <ul class="submenu">
-                    <li><a href="tennis.html">Tennis</a></li>
-                    <li><a href="running.html">Running</a></li>
-                    <li><a href="basket.html">Basket</a></li>
-                </ul>
-            </li>
+    <!-- HERO -->
+    <section class="hero">
+        <h1>Notre sélection hiver</h1>
+        <p>
+            Découvrez notre sélection d’équipements pour continuer à faire
+            du sport en plein air même pendant les mois d’hiver.
+        </p>
+    </section>
 
-            <li class="has-sub">
-                <a href="equipements.html">S'équiper</a>
-                <ul class="submenu">
-                    <li><a href="selection-ete.html">Notre sélection été</a></li>
-                    <li><a href="selection-hiver.html">Notre sélection hiver</a></li>
-                    <li><a href="astuces.html">Astuces</a></li>
-                </ul>
-            </li>
+    <!-- CONTENU -->
+    <section class="selection-hiver">
+        <h2>Équipements pour l’hiver</h2>
 
-            <li><a href="sources.html">Sources</a></li>
-        </ul>
-    </nav>
-</header>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Suspendisse lectus tortor, dignissim sit amet.
+        </p>
 
-<!-- HERO -->
-<section class="hero">
-    <h1>Selection Hiver</h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
-</section>
+        <p>
+            Cras elementum ultrices diam. Maecenas ligula massa,
+            varius a, semper congue, euismod non, mi.
+        </p>
 
+        <p>
+            Proin porttitor, orci nec nonummy molestie,
+            enim est eleifend mi.
+        </p>
 
-<section class="selection-hiver">
-    <h2>Selection Hiver</h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
+        <p>
+            Duis arcu massa, scelerisque vitae, consequat in,
+            pretium a, enim.
+        </p>
 
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
-
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
-
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
-
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
-</section>
-    
+        <p>
+            Ut in risus volutpat libero pharetra tempor.
+        </p>
+    </section>
 
     <!-- FOOTER -->
     <div id="footer"></div>
@@ -111,18 +82,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            fetch("footer.html")
-                .then(res => res.text())
-                .then(html => {
-                    const footerContainer = document.getElementById("footer");
-                    if (footerContainer) {
-                        footerContainer.innerHTML = html;
-                    }
-                })
-                .catch(err => console.error("Footer konnte nicht geladen werden:", err));
-        });
-    </script>
+    <!-- LAYOUT SCRIPT -->
+    <script src="js/layout.js"></script>
+
 </body>
 </html>
