--- a/sources.html
+++ b/sources.html
@@ -29,75 +29,49 @@
 
 <body>
 
-<!-- MENU -->
-<header>
-    <nav class="menu">
-        <ul class="menu-main">
-            <li><a href="index.html">Accueil</a></li>
+    <!-- NAVBAR -->
+    <div id="navbar"></div>
 
-            <li class="has-sub">
-                <a href="sport.html">Faire du sport en plein air</a>
-                <ul class="submenu">
-                    <li><a href="tennis.html">Tennis</a></li>
-                    <li><a href="running.html">Running</a></li>
-                    <li><a href="basket.html">Basket</a></li>
-                </ul>
-            </li>
+    <!-- CONTENU -->
+    <main class="sources-main">
+        <h1>Sources</h1>
 
-            <li class="has-sub">
-                <a href="equipements.html">S'équiper</a>
-                <ul class="submenu">
-                    <li><a href="selection-ete.html">Notre sélection été</a></li>
-                    <li><a href="selection-hiver.html">Notre sélection hiver</a></li>
-                    <li><a href="astuces.html">Astuces</a></li>
-                </ul>
-            </li>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
+            dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
+            massa, varius a, semper congue, euismod non, mi.
+        </p>
 
-            <li><a href="sources.html">Sources</a></li>
-        </ul>
-    </nav>
-</header>
+        <p>
+            Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.
+            Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue.
+            Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.
+        </p>
 
-<!-- CONTENU -->
-<main class="sources-main">
-    <h1>Sources</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
+            dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
+            massa, varius a, semper congue, euismod non, mi.
+        </p>
 
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
+        <p>
+            Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.
+            Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue.
+            Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.
+        </p>
 
-    <p>
-        Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.
-        Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue.
-        Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.
-    </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
+            dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
+            massa, varius a, semper congue, euismod non, mi.
+        </p>
 
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
-
-    <p>
-        Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.
-        Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue.
-        Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.
-    </p>
-
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor,
-        dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula
-        massa, varius a, semper congue, euismod non, mi.
-    </p>
-
-    <p>
-        Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.
-        Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue.
-        Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.
-    </p>
-</main>
+        <p>
+            Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.
+            Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue.
+            Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.
+        </p>
+    </main>
 
     <!-- FOOTER -->
     <div id="footer"></div>
@@ -106,18 +80,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            fetch("footer.html")
-                .then(res => res.text())
-                .then(html => {
-                    const footerContainer = document.getElementById("footer");
-                    if (footerContainer) {
-                        footerContainer.innerHTML = html;
-                    }
-                })
-                .catch(err => console.error("Footer konnte nicht geladen werden:", err));
-        });
-    </script>
+    <!-- Layout-Loader (Navbar + Footer) -->
+    <script src="js/layout.js"></script>
 </body>
 </html>
