--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,9 @@
 <header>
     <nav class="menu">
+        <button class="burger" aria-label="Menu" aria-expanded="false">
+            ☰
+        </button>
+
         <ul class="menu-main">
             <li><a href="index.html">Accueil</a></li>
 
