--- a/index.html
+++ b/index.html
@@ -90,16 +90,30 @@
     </section>
 
     <!-- A PROPOS -->
-    <main>
-        <h2>A propos</h2>
-        <p>
-            Haec igitur lex in amicitia sanciatur, ut neque rogemus res turpes nec faciamus rogati.
-        </p>
+<main class="about-section container">
+    <h2 class="about-title">À propos</h2>
 
-        <div class="section-box">
-            <img src="image/TennisMenu.jpg" alt="Tennis">
+    <div class="about-content row">
+        
+        <div class="about-image col-md-6">
+            <img src="img/L-L.jpg" alt="Photo de Laiquah Pandore et Laurence Cusin-Masset">
+            <p class="about-caption">
+                <strong>Légende :</strong> Photo de Laiquah Pandore et Laurence Cusin-Masset<br>
+                <strong>Crédits :</strong> Laiquah Pandore
+            </p>
         </div>
-    </main>
+
+        
+        <div class="about-text col-md-6">
+            <h3>Qui sommes-nous ?</h3>
+            <p>
+                Étudiantes, copines et passionnées de sport, nous avons décidé de fonder
+                ce site internet afin de recenser plusieurs informations utiles pour
+                pouvoir pratiquer du sport en plein air à Paris.
+            </p>
+        </div>
+    </div>
+</main>
 
     <!-- FOOTER -->
     <div id="footer"></div>
