--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="about-content row">
         
         <div class="about-image col-md-6">
-            <img src="img/L-L.jpg" alt="Photo de Laiquah Pandore et Laurence Cusin-Masset">
+            <img src="image/L-L.jpg" alt="Photo de Laiquah Pandore et Laurence Cusin-Masset">
             <p class="about-caption">
                 <strong>Légende :</strong> Photo de Laiquah Pandore et Laurence Cusin-Masset<br>
                 <strong>Crédits :</strong> Laiquah Pandore
