--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="about-content">
             
             <div class="about-image">
-                <img src="img/L-L.jpg"
+                <img src="image/L-L.jpg"
                      alt="Laiquah Pandore et Laurence Cusin-Masset">
     
                 <p class="about-caption">
