--- a/basket.html
+++ b/basket.html
@@ -30,13 +30,11 @@
           rel="stylesheet">
 </head>
 
-<body>
-
     <!-- NAVBAR -->
     <div id="navbar"></div>
 
     <!-- HERO -->
-    <section class="hero">
+    <section class="basket-hero">
         <h1>Basket : marquez votre plus beau panier</h1>
         <p>
             Vous voulez améliorer vos tirs au basket ?
@@ -46,23 +44,39 @@
     </section>
 
     <!-- CONTENU -->
-    <section class="content">
+    <section class="basket-content">
 
-        <!-- VIDEO -->
-        <div class="video-wrapper">
+        <!-- VIDEO + LÉGENDE -->
+        <figure class="basket-video">
             <iframe
                 width="800"
                 height="450"
                 src="https://www.youtube.com/embed/Ian4YZzLIMM"
                 allowfullscreen>
             </iframe>
-        </div>
+            <figcaption>
+                &lt;légende&gt; Source : @handleyourgame sur Youtube
+            </figcaption>
+        </figure>
+
+        <!-- TEXTE EXPLICATIF -->
+        <p class="basket-text">
+            Perfectionnez vos tirs grâce à cette vidéo Youtube, qui aborde à la fois la
+            technique et les fondamentaux pour apprendre à bien tirer. Position des pieds,
+            flexion des jambes, alignement du coude, finition au poignet. Devenez des pros
+            comme Mickael Jordan et n’ayez pas peur de l’échec&nbsp;!
+        </p>
 
         <!-- QUOTE -->
-        <blockquote class="quote">
-            <p>« J’ai raté 9000 tirs dans ma carrière. J’ai perdu presque 900 matchs. 26 fois, on m’a fait confiance pour prendre le tir de la victoire et j’ai raté. J’ai échoué encore et encore dans ma vie. Et c’est pourquoi j’ai réussi. »</p>
-            <footer>Michael Jordan</footer>
-        </blockquote>
+        <div class="basket-quote-wrapper">
+            <blockquote class="basket-quote">
+                <p>
+                    « J'ai échoué encore et encore dans ma vie.
+                    Et c'est pour cela que je réussis. »
+                </p>
+                <footer>— Michael Jordan</footer>
+            </blockquote>
+        </div>
 
     </section>
 
