--- a/basket.html
+++ b/basket.html
@@ -56,7 +56,7 @@
             </iframe>
 
             <figcaption class="video-legend">
-                &lt;légende&gt; Source : @handleyourgame sur Youtube
+                Source : @handleyourgame sur Youtube
             </figcaption>
         </figure>
 
