--- a/basket.html
+++ b/basket.html
@@ -5,7 +5,7 @@
     <title>Basket</title>
 
     <meta name="author" content="Laurence Cusin-Masset et Laiquah Pandore">
-    <meta name="description" content="Vous pratiquez le basket à Paris ? Découvrez des astuces pour améliorer vos tirs.">
+    <meta name="description" content="Vous pratiquez le basket à Paris ? Découvrez des astuces pour améliorer vos tirs et marquer plus facilement.">
     <meta name="keywords" content="basket, ballon de basket, panier, terrain, tirer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -26,15 +26,16 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
 </head>
 
-    <!-- NAVBAR -->
+<body>
+
+    <!-- NAVBAR (wird per layout.js geladen) -->
     <div id="navbar"></div>
 
     <!-- HERO -->
-    <section class="basket-hero">
+    <section class="hero">
         <h1>Basket : marquez votre plus beau panier</h1>
         <p>
             Vous voulez améliorer vos tirs au basket ?
@@ -43,40 +44,24 @@
         </p>
     </section>
 
-        <!-- CONTENU -->
+    <!-- CONTENU -->
     <section class="content">
 
-        <!-- VIDEO + LEGENDE -->
-        <figure class="video-wrapper">
+        <!-- ZITAT -->
+        <blockquote class="quote">
+            <p>« J’ai échoué encore et encore dans ma vie. Et c’est pour cela que je réussis. »</p>
+            <footer>Michael Jordan</footer>
+        </blockquote>
+
+        <!-- VIDEO -->
+        <div class="video-wrapper">
             <iframe
                 width="800"
                 height="450"
                 src="https://www.youtube.com/embed/Ian4YZzLIMM"
                 allowfullscreen>
             </iframe>
-
-            <figcaption class="video-legend">
-                Source : @handleyourgame sur Youtube
-            </figcaption>
-        </figure>
-
-        <!-- TEXT -->
-        <p class="basket-text">
-            Perfectionnez vos tirs grâce à cette vidéo Youtube, qui aborde à la fois la
-            technique et les fondamentaux pour apprendre à bien tirer. Position des pieds,
-            flexion des jambes, alignement du coude, finition au poignet.
-            Devenez des pros comme Mickael Jordan et n’ayez pas peur de l’échec&nbsp;!
-        </p>
-
-        <!-- QUOTE -->
-        <blockquote class="quote">
-            <p>
-                « J’ai raté 9000 tirs dans ma carrière. J’ai perdu presque 900 matchs.
-                26 fois, on m’a fait confiance pour prendre le tir de la victoire et j’ai raté.
-                J’ai échoué encore et encore dans ma vie. Et c’est pourquoi j’ai réussi. »
-            </p>
-            <footer>Michael Jordan</footer>
-        </blockquote>
+        </div>
 
     </section>
 
