--- a/basket.html
+++ b/basket.html
@@ -31,7 +31,7 @@
 
 <body>
 
-    <!-- NAVBAR (wird per layout.js geladen) -->
+    <!-- NAVBAR -->
     <div id="navbar"></div>
 
     <!-- HERO -->
@@ -47,12 +47,6 @@
     <!-- CONTENU -->
     <section class="content">
 
-        <!-- ZITAT -->
-        <blockquote class="quote">
-            <p>« J’ai échoué encore et encore dans ma vie. Et c’est pour cela que je réussis. »</p>
-            <footer>Michael Jordan</footer>
-        </blockquote>
-
         <!-- VIDEO -->
         <div class="video-wrapper">
             <iframe
@@ -62,7 +56,13 @@
                 allowfullscreen>
             </iframe>
         </div>
-
+    
+        <!-- ZITAT -->
+        <blockquote class="quote">
+            <p>« J’ai échoué encore et encore dans ma vie. Et c’est pour cela que je réussis. »</p>
+            <footer>Michael Jordan</footer>
+        </blockquote>
+    
     </section>
 
     <!-- FOOTER -->
