--- a/basket.html
+++ b/basket.html
@@ -59,7 +59,11 @@
     
         <!-- ZITAT -->
         <blockquote class="quote">
-            <p>« J’ai échoué encore et encore dans ma vie. Et c’est pour cela que je réussis. »</p>
+            <p>
+                « J’ai raté 9000 tirs dans ma carrière. J’ai perdu presque 900 matchs.
+                26 fois, on m’a fait confiance pour prendre le tir de la victoire et j’ai raté.
+                J’ai échoué encore et encore dans ma vie. Et c’est pourquoi j’ai réussi. »
+            </p>
             <footer>Michael Jordan</footer>
         </blockquote>
     
