--- a/basket.html
+++ b/basket.html
@@ -57,6 +57,14 @@
             </iframe>
         </div>
     
+        <!-- TEXTE SOUS LA VIDÉO -->
+        <p class="basket-text">
+            Perfectionnez vos tirs grâce à cette vidéo Youtube, qui aborde à la fois la
+            technique et les fondamentaux pour apprendre à bien tirer. Position des pieds,
+            flexion des jambes, alignement du coude, finition au poignet.
+            Devenez des pros comme Mickael&nbsp;Jordan et n’ayez pas peur de l’échec&nbsp;:
+        </p>
+    
         <!-- ZITAT -->
         <blockquote class="quote">
             <p>
