--- a/running.html
+++ b/running.html
@@ -38,10 +38,12 @@
 
     <!-- HERO -->
     <section class="hero">
-        <h1>Running : des itinéraires adaptés à votre niveau</h1>
+        <h1>Running à Paris : où courir et progresser selon son niveau</h1>
         <p>
-            De la Tour Eiffel aux quais de Seine, courir en plein air à Paris offre un cadre idyllique pour tous les niveaux.
-            Découvrez des parcours variés, que vous soyez débutant, joggeur régulier ou marathonien en préparation.
+            Paris, capitale de la mode, s’est plutôt transformée en capitale du running ces dernières années.
+            Courir près de la Tour Eiffel, sur les quais ou dans les jardins, chacun peut trouver un parcours
+            adapté à son rythme. Débutant ou coureur confirmé, vous trouverez des itinéraires adaptés
+            pour courir en fonction de votre niveau.
         </p>
     </section>
 
