--- a/running.html
+++ b/running.html
@@ -47,6 +47,31 @@
         </p>
     </section>
 
+    <main>
+
+    <!-- BOX 1 -->
+    <section class="content-box">
+        <h2>Pourquoi courir à Paris ?</h2>
+        <p>
+            Paris offre une grande diversité de parcours pour la course à pied :
+            quais, parcs, jardins et chemins urbains sécurisés. Peu importe votre niveau,
+            chacun peut adapter son rythme et son itinéraire.
+        </p>
+    </section>
+
+    <!-- BOX 2 -->
+    <section class="content-box">
+        <h2>Un sport accessible à tous</h2>
+        <p>
+            Le running est une activité simple, économique et accessible à tous.
+            Que vous débutiez ou que vous cherchiez à améliorer vos performances,
+            courir régulièrement permet de progresser tout en découvrant la ville
+            sous un autre angle.
+        </p>
+    </section>
+
+</main>
+
     <!-- FOOTER -->
     <div id="footer"></div>
 
