--- a/running.html
+++ b/running.html
@@ -105,13 +105,13 @@
                     <!-- Slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="image/running1.jpg" alt="Course à pied à Paris 1">
+                            <img src="image/macron.jpg" alt="Course à pied à Paris 1">
                         </div>
                         <div class="item">
-                            <img src="image/running2.jpg" alt="Course à pied à Paris 2">
+                            <img src="image/attal.jpg" alt="Course à pied à Paris 2">
                         </div>
                         <div class="item">
-                            <img src="image/running3.jpg" alt="Course à pied à Paris 3">
+                            <img src="image/m-a.jpg" alt="Course à pied à Paris 3">
                         </div>
                     </div>
 
