--- a/running.html
+++ b/running.html
@@ -84,7 +84,12 @@
                     parcs, bois, quais, stades ouverts, etc.
                 </p>
 
-                <a href="#" class="btn-running">Je me renseigne</a>
+                <a href="https://www.paris.fr/"
+                   class="btn-running"
+                   target="_blank"
+                   rel="noopener">
+                   Je me renseigne
+                </a>
 
             </div>
 
