--- a/running.html
+++ b/running.html
@@ -129,6 +129,112 @@
         </div>
     </section>
 
+    <!-- BOX 3 -->
+        <section class="running-levels">
+            <h2>Running : quel est votre niveau ?</h2>
+
+            <!-- TIMELINE -->
+            <div class="levels-timeline">
+                <div class="level">
+                    <div class="level-header">
+                        <span class="level-dot"></span>
+                        <span class="level-title">Débutant (0–3 mois)</span>
+                    </div>
+                    <ul>
+                        <li>Objectif : régularité</li>
+                        <li>Sessions courtes : 15–25 minutes</li>
+                        <li>Alternance marche/course</li>
+                    </ul>
+                </div>
+
+                <div class="level">
+                    <div class="level-header">
+                        <span class="level-dot"></span>
+                        <span class="level-title">Intermédiaire (3–12 mois)</span>
+                    </div>
+                    <ul>
+                        <li>Objectif : augmenter l’endurance</li>
+                        <li>Courses entre 30–50 minutes</li>
+                        <li>Introduction du fractionné</li>
+                    </ul>
+                </div>
+
+                <div class="level">
+                    <div class="level-header">
+                        <span class="level-dot"></span>
+                        <span class="level-title">Confirmé (1–3 ans)</span>
+                    </div>
+                    <ul>
+                        <li>Objectif : performance</li>
+                        <li>3 à 4 sorties par semaine</li>
+                        <li>Séances longues + vitesse</li>
+                    </ul>
+                </div>
+
+                <div class="level">
+                    <div class="level-header">
+                        <span class="level-dot"></span>
+                        <span class="level-title">Avancé (3+ ans)</span>
+                    </div>
+                    <ul>
+                        <li>Objectif : compétition / optimisation</li>
+                        <li>4 à 5 sorties par semaine</li>
+                        <li>Plan structuré : VMA, tempo, longues sorties</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- CAROUSEL AVEC BOUTON PAR IMAGE -->
+            <div id="niveauCarousel" class="running-carousel carousel slide" data-ride="carousel">
+
+                <div class="carousel-inner">
+
+                    <!-- SLIDE 1 -->
+                    <div class="item active">
+                        <img src="image/running-1.jpg" alt="Coureurs débutants">
+                        <div class="running-carousel-caption">
+                            <span class="running-carousel-label">THE LINK</span>
+                            <a href="https://www.paris.fr" target="_blank" class="btn-running">
+                                Courir 5 km
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- SLIDE 2 -->
+                    <div class="item">
+                        <img src="image/running-2.jpg" alt="Coureurs intermédiaires">
+                        <div class="running-carousel-caption">
+                            <span class="running-carousel-label">THE LINK</span>
+                            <a href="https://www.paris.fr" target="_blank" class="btn-running">
+                                Courir 10 km
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- SLIDE 3 -->
+                    <div class="item">
+                        <img src="image/running-3.jpg" alt="Coureurs confirmés">
+                        <div class="running-carousel-caption">
+                            <span class="running-carousel-label">THE LINK</span>
+                            <a href="https://www.paris.fr" target="_blank" class="btn-running">
+                                Préparer un semi
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- CONTROLES -->
+                <a class="left carousel-control" href="#niveauCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="right carousel-control" href="#niveauCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+
+            </div>
+        </section>
+
     <!-- FOOTER -->
     <div id="footer"></div>
 
