--- a/running.html
+++ b/running.html
@@ -191,7 +191,7 @@
 
                     <!-- SLIDE 1 -->
                     <div class="item active">
-                        <img src="image/running-1.jpg" alt="Coureurs débutants">
+                        <img src="image/bardella.jpg" alt="Coureurs débutants">
                         <div class="running-carousel-caption">
                             <span class="running-carousel-label">THE LINK</span>
                             <a href="https://www.paris.fr" target="_blank" class="btn-running">
@@ -202,7 +202,7 @@
 
                     <!-- SLIDE 2 -->
                     <div class="item">
-                        <img src="image/running-2.jpg" alt="Coureurs intermédiaires">
+                        <img src="image/lapen-old.jpg" alt="Coureurs intermédiaires">
                         <div class="running-carousel-caption">
                             <span class="running-carousel-label">THE LINK</span>
                             <a href="https://www.paris.fr" target="_blank" class="btn-running">
@@ -213,7 +213,7 @@
 
                     <!-- SLIDE 3 -->
                     <div class="item">
-                        <img src="image/running-3.jpg" alt="Coureurs confirmés">
+                        <img src="image/sarkozy.jpg" alt="Coureurs confirmés">
                         <div class="running-carousel-caption">
                             <span class="running-carousel-label">THE LINK</span>
                             <a href="https://www.paris.fr" target="_blank" class="btn-running">
