--- a/running.html
+++ b/running.html
@@ -202,7 +202,7 @@
 
                     <!-- SLIDE 2 -->
                     <div class="item">
-                        <img src="image/lapen-old.jpg" alt="Coureurs intermédiaires">
+                        <img src="image/lepen-old.jpg" alt="Coureurs intermédiaires">
                         <div class="running-carousel-caption">
                             <span class="running-carousel-label">THE LINK</span>
                             <a href="https://www.paris.fr" target="_blank" class="btn-running">
